--- a/index..html
+++ b/index..html
@@ -8,14 +8,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="/styles/style.css">
     </head>
 
     <body>
        
         <header class="cabecalho">
             <nav class="cabecalho__menu">
-                <a class="apresentacao__menu__link" href="index..html" target="_blank">Home</a>
+                <a class="apresentacao__menu__link" href="index.html" target="_blank">Home</a>
                 <a class="apresentacao__menu__link" href="about.html" target="_blank">Sobre o autor</a>
                 <a class="apresentacao__menu__link" href="curriculo.html" target="_blank">Curriculo</a>
             </nav>
