--- a/index..html
+++ b/index..html
@@ -43,7 +43,7 @@
                 </div>
             </section>    
             
-            <img class="imagem-autor" src="/assets/IMG_20250210_104752~2.jpg"  alt="imagem-autor">
+            <img class="imagem-autor" src="/assets/minha-foto.jpg"  alt="imagem-autor">
 
             
 
