--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sobre mim</title>
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     
     <body>
@@ -37,7 +37,7 @@
                 Culpa quasi explicabo minima!</p>
             </section>
 
-            <img class="imagem-autor-about" src="/assets/IMG_20250210_104752~2.jpg"  alt="imagem-autor">
+            <img class="imagem-autor-about" src="/assets/minha-foto.jpg"  alt="imagem-autor">
         </main>
        
         <footer class="rodape">
