--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        
         <header class="cabecalho">
             <nav class="cabecalho__menu">
-                <a class="apresentacao__menu__link" href="index.html" target="_blank">Welcome</a>
+                <a class="apresentacao__menu__link" href="index.html" target="_blank">Welcome2</a>
                 <a class="apresentacao__menu__link" href="about.html" target="_blank">Sobre o autor</a>
                 <a class="apresentacao__menu__link" href="curriculo.html" target="_blank">Curriculo</a>
             </nav>
